--- a/src/components/common/carolsel/intro-title.scss
+++ b/src/components/common/carolsel/intro-title.scss
@@ -1,5 +1,5 @@
 .site-card-border-less-wrapper {
-    padding: 30px;
+    padding: 10px 30px;
     background: #FAFAFB;
     display: flex;
     justify-content: center;
